# miniMacaron

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: api.py  auth.py  balance.py  indices.py  ipc.py  quotes.py  stream.py
docs/devlog/: 2026-05-30-render-loop.md
macapp/: Info.plist  Package.swift  build.sh
macapp/Sources/miniMacaron/: BalanceModel.swift  ContentView.swift  Models.swift  SetupView.swift  miniMacaronApp.swift
scripts/: clear_keys.py  dashboard.py  run_api.py  setup_keys.py  test_balance.py  verify_auth.py
